trying to fix sideways scroll on mobile again

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -43,7 +43,7 @@ section#testimonials h2 {
 
 /* PREVENT SIDEWAYS SCROLL*/
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
